# C--Practice

./: README.md
Assertions/: assert  assertions.cpp
Barriers/: barrier.cpp  barrier.cu
Basic_Concepts/: ConceptsLib.cpp  Constexpr.cpp  classTemplates.cpp  classes.cpp  constructors.cpp  copyConstructors.cpp  ct  defaultComparisons.cpp  destructors.cpp  lambdas.cpp  namespaces.cpp  nm  operatorOverloading.cpp  randomNumbers.cpp  structs.cpp
CUDA/: add  executable  helloworld.cu  jobOut-1257417.out  run.sh
Computer_Arch/: compiler_optimization.cpp  multiThreading.cpp  simulatePriority.cpp  threads
Computer_Architecture/: compiler_opt_o0  compiler_opt_o1  compiler_opt_o2  compiler_opt_o3  compiler_opt_o3_native  compiler_optimization.cpp  compiler_optimization.md
From_Scratch/: Readme.md
LLVM/: prod.ll  square.cpp  square.ll
MatMul/: dump.S  matmul  matmul.cpp
Number_Representation/: float  float.cpp  signed.cpp  unsigned.cpp
Object_Oriented/: Inheritance.cpp  Polymorphism.cpp  VirtualFunctions.cpp  abstractClasses.cpp  functionObjects.cpp  hamnah.cpp  vf  virtual_Inheritance.cpp
ParalellCpp/: atomic.cpp  mutex.cpp  openMP.cpp  paralellAlgos.cpp  pthreads.cpp  staticPartioning.cpp  threads.cpp
Patterns/: factoryMethod.cpp
Pointers/: dynamicAlloc.cpp  dynamicAlloc.s  objectPointers.cpp  point  pointers.cpp  pointers.s  sharedPtr.cpp  smartObjectPtrs.cpp  uniquePtr.cpp
References/: passByRef.cpp  pbr  ref  references.cpp
STL/: iterator  iterator.cpp  move  move.cpp  sort.cpp  span.cpp  vector  (+1 more)
cmake/1cmake/: CMakeLists.txt  helloworld.cpp
(+184 files in other folders)
